--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,8 @@
+// 2025 现代架构：仓库已在 settings.gradle.kts 中全局定义
+// 这里禁止出现 allprojects { repositories { ... } }
 buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
     dependencies {
-        classpath("com.android.tools.build:gradle:8.1.1")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10")
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
+        classpath("com.android.tools.build:gradle:8.2.0")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20")
     }
 }
