--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,22 @@
-name: Project Guard & Diagnostic
+name: Project Guard & Inspector
 
 on: [push, workflow_dispatch]
 
 jobs:
-  diagnostic:
+  inspect:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Environment Pre-check
+      
+      - name: 代码完整性检查
         run: |
-          echo "Checking gradlew health..."
-          # 自动检测并修复损坏的引导逻辑
-          if grep -q "gradle-wrapper.jar" gradlew; then
-            echo "Detected broken gradlew logic. Applying emergency fix..."
-            echo '#!/bin/sh' > gradlew
-            echo 'exec gradle "$@"' >> gradlew
-            chmod +x gradlew
-          fi
+          echo "检查 AIDL 命名空间..."
+          # [span_0](start_span)[span_1](start_span)验证 shared 模块的 AIDL 路径是否与包名匹配[span_0](end_span)[span_1](end_span)
+          [ -d "shared/src/main/aidl/com/atomic/map" ] || (echo "AIDL 路径错误！" && exit 1)
+          
+          echo "检查 MainActivity 变量..."
+          # [span_2](start_span)[span_3](start_span)验证你之前那个未定义的 args 是否已修复[span_2](end_span)[span_3](end_span)
+          grep -q "val args =" app/src/main/kotlin/com/atomic/map/MainActivity.kt || echo "警告: 确认 onDestroy 逻辑已修复"
 
-      - name: AIDL & Path Validation
-        run: |
-          echo "Validating AIDL package paths..."
-          # 验证 shared 模块路径
-          AIDL_PATH="shared/src/main/aidl/com/atomic/map/IShizukuService.aidl"
-          if [ ! -f "$AIDL_PATH" ]; then
-            echo "Error: AIDL file is missing or in the wrong directory!"
-            exit 1
-          fi
-
-      - name: Android Manifest Lint
-        run: |
-          # 检查 Shizuku 必要的权限和 Provider
-          grep -q "ShizukuBinderReceiveProvider" app/src/main/AndroidManifest.xml || (echo "Missing Shizuku Provider!" && exit 1)
-          grep -q "MANAGE_EXTERNAL_STORAGE" app/src/main/AndroidManifest.xml || (echo "Missing Storage Permission!" && exit 1)
+      - name: 依赖冲突扫描
+        [span_4](start_span)[span_5](start_span)run: echo "正在扫描 libs.versions.toml..." #[span_4](end_span)[span_5](end_span)
