--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,24 @@
-name: Project Guard & Inspector
+name: Project Guard
 
 on: [push, workflow_dispatch]
 
 jobs:
-  inspect:
+  check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       
-      - name: 代码完整性检查
+      - name: 检查配置逻辑
         run: |
-          echo "检查 AIDL 命名空间..."
-          # [span_0](start_span)[span_1](start_span)验证 shared 模块的 AIDL 路径是否与包名匹配[span_0](end_span)[span_1](end_span)
-          [ -d "shared/src/main/aidl/com/atomic/map" ] || (echo "AIDL 路径错误！" && exit 1)
+          # 确保根目录有仓库定义，否则直接拦截
+          grep -q "google()" build.gradle.kts || (echo "错误：缺少仓库定义" && exit 1)
           
-          echo "检查 MainActivity 变量..."
-          # [span_2](start_span)[span_3](start_span)验证你之前那个未定义的 args 是否已修复[span_2](end_span)[span_3](end_span)
-          grep -q "val args =" app/src/main/kotlin/com/atomic/map/MainActivity.kt || echo "警告: 确认 onDestroy 逻辑已修复"
-
-      - name: 依赖冲突扫描
-        [span_4](start_span)[span_5](start_span)run: echo "正在扫描 libs.versions.toml..." #[span_4](end_span)[span_5](end_span)
+      - name: 检查 MainActivity 语法死穴
+        run: |
+          # 检查是否还在 onDestroy 里引用未定义的 args
+          if grep -q "unbindUserService(args" app/src/main/kotlin/com/atomic/map/MainActivity.kt; then
+             if ! grep -q "val args =" app/src/main/kotlin/com/atomic/map/MainActivity.kt; then
+                echo "致命错误：MainActivity 引用了未定义的变量 args！"
+                exit 1
+             fi
+          fi
