--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="dev.rikka.shizuku.permission.API_V23" />
+
+    <queries>
+        <package android:name="dev.rikka.shizuku" />
+    </queries>
 
     <application
         android:label="AtomicMap"
